2008-04-06  Chad Woolley  <thewoolleyman@gmail.com>

	* lib/rubygems.rb:  Add setter Gems.platforms=, to allow platforms
	to be set/reset when invoking or testing RubyGems programatically.
	Also force Gems.platforms to automatically reset to default of 
	[Gem::Platform::RUBY, Gem::Platform.local] if cleared.
	* lib/rubygems/version_option.rb:  Change add_platform_option
	to initialize Gem.platforms to contain only Gem::Platform::RUBY

2008-04-04  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_index.rb:  Make Gem::SourceIndex#refresh!
	more-correct.  Reported by Paul Haddad.
	* lib/rubygems.rb:  Add Gem::refresh.  Bug #19176 by Hongli Lai.
	* lib/rubygems/dependency_installer.rb:  Put downloaded gems into
	install_dir's cache.  Patch #19182 by Richard Brown.

2008-04-03  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_info_cache.rb:  Merge full cache file into
	latest data.  Don't write cache files when checking for them.  Only
	update full cache file when we've read it.  Refresh all data when
	loading all data.
	* lib/rubygems/dependency_installer.rb:  Fix --force to work without
	network for dependent gems.  Fix all-fetching test.
	* lib/rubygems/commands/query_command.rb:  Obey --all flag for gem
	query.
	* lib/rubygems/commands/environment_command.rb:  Don't display
	RubyGemsPackageVersion.
	* lib/rubygems/indexer.rb:  Fix typo.  Patch by Tom Copeland.
	* lib/rubygems/command_manager.rb:  Display RubyGemsVersion with
	--version.
	* lib/rubygems/commands/pristine_command.rb:  Rebuild extensions along
	with everything else.  Patch #19281 by Dr. Nic Williams.

2008-04-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Fix prefix to point to directory above RubyGems,
	so RubyGems will be installed into lib/.
	* setup.rb:  Work around apple's libdir-installed RubyGems, by
	installing into sitelibdir.
	* Rakefile:  Add svnversion to RubyGems version number for `rake
	install`.

2008-03-31  Luis Lavena  <luislavena@gmail.com>
